test: TableGroupServiceTest 가독성 개선